docs: codegen.md に実践ガイド・AIエージェント技法・増幅サイクルを追記